cabal-version: 3.0

-- The following command was used to initially generate this file:
--
--   group-testcabal-cabal-cabal init
--

name: testcabal
version: 0.1.0.0

author: Real Folk
maintainer: developers@realfolk.com

build-type: Simple

common warnings
  ghc-options: -Wall

executable testcabal
  import: warnings

  default-language: Haskell2010

  hs-source-dirs: app

  main-is: Main.hs

  build-depends:
    base ^>=4.16.4.0
